# slotmateserver

./: .gitignore  Makefile  pyproject.toml  python_students.csv  requirements.txt
apps/appointments/: admin.py  enums.py  models.py  serializers.py  views.py
apps/appointments/migrations/: 0001_initial.py  0002_alter_appointment_user.py  0003_alter_appointment_status.py  0004_appointment_rejection_reason_and_more.py
apps/notify_letter/: apps.py  utils.py
apps/notify_letter/templates/emails/: appointment_confirmed.html  appointment_rejected.html  password_reset.html  password_reset_confirmation.html
apps/users/: admin.py  models.py  serializers.py  validator.py  views.py
apps/users/management/commands/: import_students.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_user_is_first_login.py  0004_user_last_login_ip_user_last_logout.py  0005_studentimport.py
config/: jwt_settings.py  settings.py  smtp_settings.py  urls.py
data/: students.csv
docs/dbml/: slotmate.dbdiagram  slotmate.dbml
utils/: network.py  otp_generator.py
